--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,43 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Two
+      Search APOD
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-subtitle>
+              Search APOD by date
+            </ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+              <ion-item>
+                <ion-label> YY MM DD</ion-label>
+                <ion-datetime
+                  name="searchDate"
+                  ngModel
+                  placeholder="Select Date"
+                  displayFormat="YYYY MM DD"
+                ></ion-datetime>
+              </ion-item>
+
+              <ion-button type="submit">
+                <ion-icon slot="start" name="search"></ion-icon>
+                Search APOD
+              </ion-button>
+            </form>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+    
+  </ion-grid>
+</ion-content>
