--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
       Search APOD
     </ion-title>
@@ -37,7 +37,5 @@
         </ion-card>
       </ion-col>
     </ion-row>
-
-    
   </ion-grid>
 </ion-content>
